fix padding on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -359,6 +359,17 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .home-main-content {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .quote-box,
+  .testimony-card {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
 }
 
 /* Section titles */
